<resources>
    <string name="app_name">SocketsPractice</string>
    <string name="ip_address">IP-Address</string>
    <string name="port_no">Port No</string>
    <string name="connect_to_server">Connect To Server</string>
    <string name="send">SEND</string>
    <string name="enter_message">Enter Message</string>
    <string name="no_messages">No Messages yet</string>
    <string name="connected">Connected</string>
</resources>