<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etIP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ip_address"
        android:inputType="text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etIP"
        android:hint="@string/port_no"
        android:inputType="number" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConnect"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/etPort"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/connect_to_server"
        app:cornerRadius="5dp" />

    <ProgressBar
        android:id="@+id/bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvMessages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etMessage"
        android:layout_below="@+id/btnConnect"
        android:scrollbars="vertical"
        android:text="@string/no_messages"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSend"
        android:hint="@string/enter_message"
        android:inputType="text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:enabled="false"
        android:layout_alignParentBottom="true"
        android:text="@string/send"
        app:cornerRadius="5dp" />
</RelativeLayout>